--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "framer-motion":"latest"
+    "framer-motion":"latest",
+    "yocto-queue": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start --port 3020",
